--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   stats-service:
-    build: stats-service/stats-server
+    build: stats-service
     container_name: stats-service
     ports:
       - "9090:9091"
